Ensure header is visible on scroll (#2026)

--- a/jenkins-design-language/less/components/result-status.less
+++ b/jenkins-design-language/less/components/result-status.less
@@ -199,8 +199,11 @@
 .result-item-head {
     display:flex;
     align-items:stretch;
+    background-color: white;
     cursor:pointer;
     border: solid 1px @gray-lighter;
+    position: sticky;
+    top: 0;
 }
 
 .result-item-icon {
